New functionality filter and search

--- a/rbei_ui5_reuse_rep/webapp/index.html
+++ b/rbei_ui5_reuse_rep/webapp/index.html
@@ -4,9 +4,10 @@
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>rbei_ui5_reuse_rep</title>
+		<!--data-sap-ui-theme="sap_fiori_3"-->
 		<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_fiori_3"
+			data-sap-ui-theme="sap_belize"
 			data-sap-ui-resourceroots='{"RBEI_UI5.rbei_ui5_reuse_rep": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
